--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,11 +56,14 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - run: export DOCKER_CLI_ACI=0
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+      env:
+        DEBUG: "true"
 
     - name: Build and Push action
       uses: docker/build-push-action@v6
