--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,5 @@
-# CICD using GitHub actions
-
 name: CI/CD
 
-# Exclude the workflow to run on changes to the helm chart
 on:
   push:
     branches:
@@ -22,7 +19,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Go 1.22
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
         go-version: 1.22
 
@@ -31,19 +28,24 @@ jobs:
 
     - name: Test
       run: go test ./...
-  
+
   code-quality:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
+        
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: '1.22'  # Keep this consistent or upgrade based on your requirements
+        
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v6
       with:
         version: v1.56.2
-  
+        install-mode: binary
+
   push:
     runs-on: ubuntu-latest
 
@@ -62,16 +64,13 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-
-
     - name: Build and Push action
       uses: docker/build-push-action@v6
       with:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ vars.DOCKERHUB_USERNAME }}/go-web-app:${{github.run_id}}
-
+        tags: ${{ vars.DOCKERHUB_USERNAME }}/go-web-app:${{ github.run_id }}
 
   update-newtag-in-helm-chart:
     runs-on: ubuntu-latest
@@ -86,7 +85,7 @@ jobs:
 
     - name: Update tag in Helm chart
       run: |
-        sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/go-web-app-chart/values.yaml
+        sed -i 's/tag: .*/tag: "${{ github.run_id }}"/' helm/go-web-app-chart/values.yaml
 
     - name: Commit and push changes
       run: |
